garage/garage-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  namespace: openshift-distributed-tracing
  labels:
    app: garage-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage-webui
  template:
    metadata:
      labels:
        app: garage-webui
    spec:
      containers:
        - name: garage-webui
          image: khairul169/garage-webui:latest
          ports:
            - containerPort: 3909
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/garage.toml
              subPath: garage.toml
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: garage-config
