garage/garage-ui-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: garage-web-ui
  annotations:
    metallb.universe.tf/address-pool: pre
    metallb.universe.tf/loadBalancerIPs: 10.90.0.75
spec:
  ports:
    - port: 3909
      targetPort: 3909
      name: garage-http
      protocol: TCP
  selector:
    app: garage-webui
  type: LoadBalancer
