garage/garage-ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
  namespace: openshift-distributed-tracing
spec:
  selector:
    app: garage
  ports:
    - protocol: TCP
      port: 3902
      targetPort: 3902
  type: ClusterIP
