garage/garage-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-webui-ingress
  namespace: openshift-distributed-tracing
spec:
  rules:
    - host: garage-webui.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-webui
                port:
                  number: 3902
